secure-kubernetes-orchestration/secure-nginx.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: secure-nginx
  namespace: secure-apps
spec:
  replicas: 1
  selector:
    matchLabels:
      app: secure-nginx
  template:
    metadata:
      labels:
        app: secure-nginx
    spec:
      securityContext:
        runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: nginx
          image: nginxinc/nginx-unprivileged:stable-alpine
          ports:
            - containerPort: 8080
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            runAsUser: 101
            runAsGroup: 101
            readOnlyRootFilesystem: false
